insertion: 1st build

--- a/todo.txt
+++ b/todo.txt
@@ -1,13 +1,2 @@
-﻿1. виртуальный том хранит коллекцию маунтпоинтов, как prm:unordered_set мапящий виртуальный path маунтпоинта на его структуру
-
-2. в начале поиска виртуальный том ищет ближайший маунтпоинт разложением пути с конца и поиском префикса по коллекции O(длина пути в сегментах)*O(количество маунтпоинов)
-
-3. маунтпоинт есть коллекция маунтов, упорядоченная по приоритету физического тома
-
-4. маунт есть том + путь + индекс (путь нужен для предварительной фильтрации запросов к физ тому)
-
-5. маунт кодирует операцию в виде функтора над ключом физического тома
-
-6. маунт предоставляет точку распараллеливания поиска
-
-7. проверить возможность использования std::filesystem::path для работы над ключами
+﻿1. consider custom heaps to declain BTreeMaxDepth & MaxTreeDepth limits
+2. consider custom heap for b-tree nodes to decrease heap defragmentation
