--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-﻿1. implement mutex optimized for rare EXCLUSIVE and frequent SHARED locking
+﻿1. implement mutex optimized for rare EXCLUSIVE and frequent SHARED lockin: DONE
 2. simplify virtual volume implementation with boost::multi_index_container
 3. using shared mutex in MRU cache is terrible idea, cuz every access to MRU cache implies writting, but upgrade from SHARED to EXCUSIVE lock is extremely hard operation
